# clustering-showroom

./: .gitignore  README.md  pyproject.toml
self_organizing_maps/: main.ipynb  main.py  utils.py
self_organizing_maps/classes/: __init__.py  self_organizing_map.py  som_config.py
self_organizing_maps/docs/: self_organizing_map.md
