[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustering-showroom"
version = "0.1.0"
description = "Various examples of clustering algorithms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["self_organizing_maps*"]